--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -1,136 +1,320 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <title>Selection</title>
- <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
-    <link rel="icon" href="static/tequed.png" />
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Price Prediction</title>
+  <meta content="" name="descriptison">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href='{{url_for('static',filename='assets/img/favicon.png')}}' rel="icon">
+  <link href='{{url_for('static',filename='assets/img/apple-touch-icon.png')}}' rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href='{{url_for('static',filename='assets/vendor/bootstrap/css/bootstrap.min.css')}}' rel="stylesheet">
+  <link href='{{url_for('static',filename='assets/vendor/icofont/icofont.min.css')}}' rel="stylesheet">
+  <link href='{{url_for('static',filename='assets/vendor/boxicons/css/boxicons.min.css')}}' rel="stylesheet">
+  <link href='{{url_for('static',filename='assets/vendor/owl.carousel/assets/owl.carousel.min.css')}}' rel="stylesheet">
+  <link href='{{url_for('static',filename='assets/vendor/venobox/venobox.css')}}' rel="stylesheet">
+  <link href='{{url_for('static',filename='assets/vendor/remixicon/remixicon.css')}}' rel="stylesheet">
+  <link href='{{url_for('static',filename='assets/vendor/aos/aos.css')}}' rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href='{{url_for('static',filename='assets/css/style.css')}}' rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: Gp - v2.1.0
+  * Template URL: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
+
 <body>
-<div class="color-gradient">
-<h1 class="animate__animated animate__zoomInDown">Want To Buy A Used Vehicle?  But Worried About Budget?</h1>
-<h1 class="second-head1 animate__animated animate__zoomIn">To Know Your Dream Vehicle Price Value,</h1>
-<h2 class="animate__animated animate__bounceIn">Select Your Vehicle..</h2>
-</div>
-<hr class="first-hr animate__shakeY">
-<div class="buttons ">
-	<div class="car_button">
-		<button onclick="window.location.href='{{ url_for('CAR') }}'" class="animate__animated animate__bounceIn"><b>CAR</b></button>
-	</div>
-	<hr class="animate__bounceInRight">
-	<div class="bike_button">
-		<button onclick="window.location.href='{{ url_for('BIKE') }}'"  class="animate__animated animate__bounceIn"><b>BIKE</b></button>
-	</div>
-</div>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top ">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <h1 class="logo"><a href="index.html">Price Prediction<span>.</span></a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav class="nav-menu d-none d-lg-block">
+        <ul>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#cta">Predict</a></li>
+          <li><a href="#team">Team</a></li>
+
+        </ul>
+      </nav><!-- .nav-menu -->
+
+      <a href="#about" class="get-started-btn scrollto">Get Started</a>
+
+    </div>
+  </header><!-- End Header -->
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex align-items-center justify-content-center">
+    <div class="container" data-aos="fade-up">
+      <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
+        <div class="col-xl-6 col-lg-8">
+          <h1>PEOPLE TENDS TO PREDICT<span>,</span></h1>
+          <h2>AND FINALLY WE ARE HERE</h2>
+          <h2>PREDICTING PRICES FOR YOU</h2>
+          <h2>FOR YOUR BUDGET FRIENDLY CARS OR BIKES</h2>
+      </div>
+    </div>
+
+      <div class="row mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
+        <div class="col-xl-2 col-md-4 col-6">
+          <div class="icon-box">
+            <i class="ri-bar-chart-box-line" style="color:orange"></i>
+            <h3><a href='{{ url_for('Home1') }}'>PREDICT</a></h3>
+          </div>
+        </div>
+
+
+
+    </div>
+  </section><!-- End Hero -->
+
+  <main id="main">
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row">
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+            <img src="static/assets/img/about.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
+            <h3> A car or a bike price prediction has been a high interest of research area, as it requires noticeable effort.</h3>
+            <p class="font-italic">
+              it is common to lease a car or a bike rather than buying it
+              outright.
+            </p>
+            <ul>
+              <li><i class="ri-check-double-line"></i>  Car and Bike price prediction involves expert knowledge, because price usually depends on many
+               distinctive features and factors.</li>
+              <li><i class="ri-check-double-line"></i>Different features like exterior color, door
+               number, type of transmission, dimensions, safety, air
+               condition , interior , whether it has navigation or not
+               will also influence the car price.</li>
+              <li><i class="ri-check-double-line"></i> Different features like exterior color,number of gear,
+               will also influence the bike price.</li>
+            </ul>
+            <p>
+              The main aim of our project is to predict the price of used cars and bikes.In this we are taking the user input in the user input we are asking the needs like first we are asking what you need car or bike.
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End About Section --><!-- End About Section -->
+
+    <!-- ======= Clients Section ======= -->
+    <section id="clients" class="clients">
+      <div class="container" data-aos="zoom-in">
+
+        <div class="owl-carousel clients-carousel">
+          <img src="static/assets/img/clients/client-1.png" alt="">
+        </div>
+
+      </div>
+    </section><!-- End Clients Section -->
+
+    <!-- ======= Features Section ======= -->
+    <section id="features" class="features">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row">
+          <div class="image col-lg-6" style='background-image: url("static/assets/img/features.jpg");' data-aos="fade-right"></div>
+          <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
+            <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
+              <i class="bx bx-receipt"></i>
+              <h4>Reduce time</h4>
+              <p>Just by giving inputs and will take the user input and according to the user input it will predict the price of user car and bike.</p>
+            </div>
+            <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
+              <i class="bx bx-cube-alt"></i>
+              <h4>Give Accuracy</h4>
+              <p>it will also tell how much accurate it is.</p>
+            </div>
+            <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
+              <i class="bx bx-images"></i>
+              <h4>Helps to know the budget</h4>
+              <p>It helps to know how much budget we have to keep for buying CAR or BIKE.</p>
+            </div>
+
+
+      </div>
+    </section><!-- End Features Section -->
+
+    <!-- ======= Cta Section ======= -->
+    <section id="cta" class="cta">
+      <div class="container" data-aos="zoom-in">
+
+        <div class="text-center">
+          <h3>PRICE PREDICTION</h3>
+          <p>This website basically predicts the price of the old cars and bikes, below button will direct you to the prediction page. So go ahead and check yourself.</p>
+          <a class="cta-btn" href='{{ url_for('Home1') }}'>Click To Predict Price</a>
+        </div>
+
+      </div>
+    </section><!-- End Cta Section -->
+
+
+    <!-- ======= Team Section ======= -->
+    <section id="team" class="team">
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <p>Our Team</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-4 col-md-7 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="static/assets/img/team/1.jpg" class="mx-auto rounded-circle img-fluid" alt="">
+              </div>
+              <div class="member-info purv">
+
+                <h3> &nbsp;&nbsp;&nbsp;&nbsp;<b>PURV H JEJA</b></h3>
+                 <div class="social">
+                  <a href="https://twitter.com/jeja_purv?s=09"><i class="icofont-twitter" style="color:blue"></i></a>
+                  <a href="https://www.facebook.com/purv.jeja/"><i class="icofont-facebook" style="color:blue"></i></a>
+                  <a href="https://www.instagram.com/hashtag_purv/"><i class="icofont-instagram" style="color: #FD1D1D"></i></a>
+                  <a href="https://www.linkedin.com/in/purvjeja/"><i class="icofont-linkedin" style="color:blue"></i></a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-7 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="200">
+              <div class="member-img">
+                <img src="static/assets/img/team/2.jpg" class="mx-auto rounded-circle img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h3>&nbsp;&nbsp;&nbsp;<b>PRAGYA SINGH</b></h3>
+               <div class="social">
+                  <a href="https://twitter.com/PragyaS23993625?s=09"><i class="icofont-twitter"style="color:blue"></i></a>
+                  <a href="https://www.facebook.com/profile.php?id=100006565607404"><i class="icofont-facebook"style="color:blue"></i></a>
+                  <a href="https://www.instagram.com/singh__pragya/"><i class="icofont-instagram"style="color:#FD1D1D"></i></a>
+                  <a href="https://www.linkedin.com/in/pragya-singh-285bb5178/"><i class="icofont-linkedin"style="color:blue"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-7 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="300">
+              <div class="member-img">
+                <img src="static/assets/img/team/3.jpg" class="mx-auto rounded-circle img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h3><b>VAIBHAV RATHORE</b></h3>
+                <div class="social">
+                  <a href="https://twitter.com/thakur_ji_27?s=09"><i class="icofont-twitter"style="color:blue"></i></a>
+                  <a href="https://www.facebook.com/vaibhav.rathore.27"><i class="icofont-facebook"style="color:blue"></i></a>
+                  <a href="https://www.instagram.com/thakur_ji_27/"><i class="icofont-instagram"style="color:#FD1D1D"></i></a>
+                  <a href="https://www.linkedin.com/in/vaibhav-rathore-7560b7178/"><i class="icofont-linkedin"style="color:blue"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Team Section -->
+
+
+    <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials">
+      <div class="container" data-aos="zoom-in">
+
+        <div class="owl-carousel testimonials-carousel">
+
+          <div class="testimonial-item">
+            <h2>Under The Guidance Of</h2>
+            <img src="static/assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+            <h3>ADITYA S K</h3>
+            <h4>CTO &amp; Director At Tequed Labs</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              Push yourself, because no one else is going to do it for you.
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Testimonials Section -->
+
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6" style="color:grey">
+            <div class="footer-info">
+              <h3>Price Prediction<span>.</span></h3>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Predict</a></li>
+            </ul>
+          </div>
+
+    <div class="container">
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/ -->
+        Designed by <a>OUR TEAM</a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
+  <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
+  <div id="preloader"></div>
+
+  <!-- Vendor JS Files -->
+  <script src='{{url_for('static',filename='assets/vendor/jquery/jquery.min.js')}}'></script>
+  <script src='{{url_for('static',filename='assets/vendor/bootstrap/js/bootstrap.bundle.min.js')}}'></script>
+  <script src='{{url_for('static',filename='assets/vendor/jquery.easing/jquery.easing.min.js')}}'></script>
+  <script src='{{url_for('static',filename='assets/vendor/php-email-form/validate.js')}}'></script>
+  <script src='{{url_for('static',filename='assets/vendor/owl.carousel/owl.carousel.min.js')}}'></script>
+  <script src='{{url_for('static',filename='assets/vendor/isotope-layout/isotope.pkgd.min.js')}}'></script>
+  <script src='{{url_for('static',filename='assets/vendor/venobox/venobox.min.js')}}'></script>
+  <script src='{{url_for('static',filename='assets/vendor/waypoints/jquery.waypoints.min.js')}}'></script>
+  <script src='{{url_for('static',filename='assets/vendor/counterup/counterup.min.js')}}'></script>
+  <script src='{{url_for('static',filename='assets/vendor/aos/aos.js')}}'></script>
+
+
+  <!-- Template Main JS File -->
+  <script src='{{url_for('static',filename='assets/js/main.js')}}'></script>
+
 </body>
-<style type="text/css">
-	.color-gradient{
-		background: linear-gradient(to bottom,rgba(0,0,0,1.0) 15%,rgba(0,0,0,1.0) 20%,rgba(0,0,0,0.95) 30%,rgba(0,0,0,0.90) 40% , rgba(0,0,0,0.85) 45%,rgba(0,0,0,0.8) 50%,rgba(0,0,0,0.75) 55%,rgba(0,0,0,0.7) 60%,rgba(0,0,0,0.65) 65%,rgba(0,0,0,0.6) 70%,rgba(0,0,0,0.55) 75%,rgba(0,0,0,0.5) 80%,rgba(0,0,0,0.4) 85%,rgba(0,0,0,0.2) 90%,rgba(0,0,0,0.1) 95%,rgba(0,0,0,0.0) 100%);
-		width: 100%;
-		height:320px;
-		margin-top: 0%;
-		padding: 0px;	
-		border-top:1px solid black; 	
-	}
-	body{
-		margin:0%;
-		margin-top: 0%;
-		margin-left: 0%;
-		padding-top:0px;
-		color: white;
-		background-image: url('static/home.jpg');
-		background-position:40% 9%;
-		height: 100%;
-		background-size:cover;
-		animation: breath_af 40s linear 1;
-	}
 
-@keyframes breath_af {
-  0%   { background-size: 250% auto; }
-  20% { background-size:100% auto; }
-  80% { background-size: 110% auto; }
-  100% { background-size: 100% auto; }
-}
-@keyframes button_work {
-  0%   { background-size: 220% auto; }
-  50% { background-size:160% auto; }
-  100% { background-size: 100% auto; }
-}
-
-.animate__zoomInDown{
- animation-delay: 0s;
- --animate-duration: 3s;
-}
-.animate__zoomIn{
- animation-delay: 3s;
- --animate-duration: 3s;	
-}
-.animate__bounceIn{
- animation-delay: 7s;
- --animate-duration: 4s;		
-}
-
-.car_button{
-width: 500px;	
-height: 200px;
-}
-
-.bike_button{
-width: 500px;
-height: 200px;
-}
-.bike_button button{
-	margin-left: 200px;
-}
-
-.first-hr{
-	width:600px;
-	margin-left: 530px;
-	border:2px solid white; 
-}
-hr{
-	border:3px solid white; 
-}
-h2{
-	background-color: rgba(0,0,0,0.5);
-	margin-left: 630px;
-	margin-top: 120px;
-	width: 430px;
-	font-size: 45px;
-	padding-left: 30px;
-}
-.second-head1{
-font-size: 35px;
-}
-h1{
-	font-size: 45px;
-	padding-left: 30px;
-}
-button{
-	margin-top: 10px;
-	margin-left: 100px;
-	width:200px;
-    height:200px;
-    border-radius: 50%;
-    background: transparent;
-    color: white;
-    box-shadow: 10px 10px 10px 10px rgba(255,255,255,0.5);
-}
-button:hover{
-	background-color: rgba(255,255,255,0.5);
-	color: black;
-	box-shadow: 5px 5px 5px 5px black;
-}
-b{
-	font-size: 50px;
-}
-.buttons{
-	margin-left: 330px;
-	margin-top: 50px;
-	display: flex;
-	width: 1000px;
-	height: 200px;
-}
-</style>
 </html>
