--- a/pragya/assets/css/style.css
+++ b/pragya/assets/css/style.css
@@ -396,9 +396,10 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/bikecar.jpg") top center;
   background-size: cover;
   position: relative;
+
 }
 
 #hero:before {
@@ -412,9 +413,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .container {
-  position: relative;
-  padding-top: 74px;
-  text-align: center;
+  background: rgba(0,0,0,0.7);
+    border-radius: 30px;
+    position: absolute;
+    left: 50%;
+    width: 860px;
+    height: 450px;
+    color: white;
+    margin-top: 80px;
+    align-content: right;
+    font-size: 50px;
+    padding-top: 20px;
+    padding-left: 40px;
 }
 
 #hero h1 {
@@ -442,6 +452,7 @@ h1, h2, h3, h4, h5, h6 {
   border: 1px solid rgba(255, 255, 255, 0.3);
   height: 100%;
   text-align: center;
+   box-shadow: 5px 10px;
 }
 
 #hero .icon-box i {
